base/k8s/grafana-agent-credentials.yml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
