base/k8s/pihole.yml
apiVersion: v1
kind: Namespace
metadata:
  name: pihole
  annotations:
    operator.1password.io/auto-restart: "true"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pihole
  name: pihole
  namespace: pihole
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: pihole
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: pihole
    spec:
      containers:
        - image: pihole/pihole
          resources:
            limits:
              memory: "100Mi"
          imagePullPolicy: IfNotPresent
          name: pihole
          ports:
            - containerPort: 80
              name: pihole-http
              protocol: TCP
            - containerPort: 53
              name: pihole-dns-tcp
              protocol: TCP
            - containerPort: 53
              name: pihole-dns-udp
              protocol: UDP
            - containerPort: 443
              name: pihole-ssl
              protocol: TCP
            - containerPort: 67
              name: client-udp
              protocol: UDP
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pihole
  name: pihole-tcp
  namespace: pihole
spec:
  ports:
    - name: pihole-http
      port: 80
      protocol: TCP
      targetPort: pihole-http
  selector:
    app: pihole
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pihole
  name: pihole-lb-tcp
  namespace: pihole
  annotations:
    metallb.universe.tf/allow-shared-ip: "pihole-lb"
spec:
  ports:
    - name: pihole-dns-tcp
      port: 53
      protocol: TCP
      targetPort: pihole-dns-tcp
  selector:
    app: pihole
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pihole
  name: pihole-lb-udp
  namespace: pihole
  annotations:
    metallb.universe.tf/allow-shared-ip: "pihole-lb"
spec:
  ports:
    - name: pihole-dns-udp
      port: 53
      protocol: UDP
      targetPort: pihole-dns-udp
  selector:
    app: pihole
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole
  namespace: pihole
spec:
  rules:
    - host: pihole.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pihole-tcp
                port:
                  number: 80
